--- a/libsodium-bindings/libsodium-bindings.cabal
+++ b/libsodium-bindings/libsodium-bindings.cabal
@@ -68,6 +68,7 @@ library
     LibSodium.Bindings
     LibSodium.Bindings.AEAD
     LibSodium.Bindings.Comparison
+    LibSodium.Bindings.Conversions
     LibSodium.Bindings.CryptoAuth
     LibSodium.Bindings.CryptoBox
     LibSodium.Bindings.CryptoSign
